--- a/ansible/roles/rhdm-central/vars/main.yml
+++ b/ansible/roles/rhdm-central/vars/main.yml
@@ -9,4 +9,5 @@ org_uberfire_metadata_index_dir: "{{ rhdm_central_data }}"
 org_uberfire_nio_git_ssh_cert_dir: "{{ rhdm_central_data }}"
 org_guvnor_m2repo_dir: "{{ rhdm_central_data }}/repositories/kie"
 org_uberfire_nio_git_hooks: "{{ rhdm_central_data }}/git-hooks"
+appformer_git_hooks_bundle: "{{ rhdm_central_data }}/git-hook-messages.properties"
 kie_maven_settings_custom: "{{ rhdm_central_data }}/settings.xml"
