--- a/ansible/group_vars/central.yml
+++ b/ansible/group_vars/central.yml
@@ -4,6 +4,12 @@
 # These include inherited opts from standalone.conf. Appending of JAVA_OPTS not possible, overwrite only.
 jboss_eap_svc_java_opts: "-Xms4096m -Xmx4096m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=1024m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=$JBOSS_MODULES_SYSTEM_PKGS -Djava.awt.headless=true"
 
+# GitHub access token with permission to list and create public keys.
+rhdm_central_github_access_token: paste-github-token-here
+
+# The host to add to the known_hosts, so it allows 'git push' using SSH.
+rhdm_central_git_hooks_known_hosts: github.com
+
 # Use a Maven Central mirror repository.
 #rhdm_central_maven_mirror_central_repo_url: http://uk.maven.org/maven2
 
