--- a/ansible/roles/rhdm-central/tasks/setup.yml
+++ b/ansible/roles/rhdm-central/tasks/setup.yml
@@ -17,6 +17,29 @@
 - name: run setup.cli JBoss configuration
   command: "{{ rhdm_central_home }}/bin/jboss-cli.sh --file={{ rhdm_central_temp }}/setup.cli"
 
+# SSH keys necessary to git clone (import projects) and push via SSH.
+
+- name: generate SSH key pair {{ rhdm_central_ssh_key }}
+  openssh_keypair:
+    path: "{{ rhdm_central_ssh_key }}"
+  register: openssh_keypair
+
+- name: upload SSH public key to github.com
+  local_action:
+    module: github_key
+    name: rhdm-central
+    token: "{{ rhdm_central_github_access_token }}"
+    pubkey: "{{ openssh_keypair.public_key }}"
+  when: rhdm_central_github_access_token is defined
+
+# Git hook required steps below, knows_hosts needed for the 'git push'.
+
+- name: add {{ rhdm_central_git_hooks_known_hosts }} host key to known_hosts
+  known_hosts:
+    name: "{{ rhdm_central_git_hooks_known_hosts }}"
+    key: "{{ lookup('pipe', 'ssh-keyscan -t rsa {{ rhdm_central_git_hooks_known_hosts }}') }}"
+  when: rhdm_central_git_hooks_known_hosts is defined
+
 - name: create git-hook directory {{ org_uberfire_nio_git_hooks }}
   file:
     path: "{{ org_uberfire_nio_git_hooks }}"
