--- a/ansible/roles/rhdm-central/vars/main.yml
+++ b/ansible/roles/rhdm-central/vars/main.yml
@@ -10,4 +10,5 @@ org_uberfire_nio_git_ssh_cert_dir: "{{ rhdm_central_data }}"
 org_guvnor_m2repo_dir: "{{ rhdm_central_data }}/repositories/kie"
 org_uberfire_nio_git_hooks: "{{ rhdm_central_data }}/git-hooks"
 appformer_git_hooks_bundle: "{{ rhdm_central_data }}/git-hook-messages.properties"
+rhdm_central_ssh_key: "{{ ansible_user_dir }}/.ssh/id_rsa"
 kie_maven_settings_custom: "{{ rhdm_central_data }}/settings.xml"
