Increase idempotency and fix other ansible-lint warnings

--- a/ansible/roles/jboss-eap/meta/main.yml
+++ b/ansible/roles/jboss-eap/meta/main.yml
@@ -1,5 +1,19 @@
 ---
 allow_duplicates: true
+
 dependencies:
   - role: environment
 
+galaxy_info:
+  author: juliaaano
+  description: JBoss Enterprise Application Platform - EAP.
+  license: "license (MIT)"
+  min_ansible_version: 2.9
+  platforms:
+    - name: EL
+      versions:
+        - 7
+  galaxy_tags:
+    - java
+    - jboss
+    - eap
