--- a/site.yml
+++ b/site.yml
@@ -55,8 +55,8 @@
   post_tasks:
     - debug:
         msg:
-          - "Run Central: nohup $RHDM_CENTRAL_HOME/bin/standalone.sh -c standalone-full.xml > central.log &"
-          - "Run Server: nohup $RHDM_SERVER_HOME/bin/standalone.sh -c standalone-full.xml > server.log &"
+          - "Run Central: $RHDM_CENTRAL_HOME/bin/standalone.sh -c standalone-full.xml"
+          - "Run Server: $RHDM_SERVER_HOME/bin/standalone.sh -c standalone-full.xml"
           - "Central URL: http://{{ inventory_hostname }}:8180/decision-central"
           - "Server URL: http://{{ inventory_hostname }}:8080/kie-server/services/rest/server"
       tags: debug
