Upgrade RHDM to 7.6.0

--- a/roles/jboss-eap/defaults/main.yml
+++ b/roles/jboss-eap/defaults/main.yml
@@ -7,6 +7,7 @@ jboss_eap_patch_artifact_names:
   - jboss-eap-7.2.3-patch.zip
   - jboss-eap-7.2.4-patch.zip
   - jboss-eap-7.2.5-patch.zip
+  - jboss-eap-7.2.6-patch.zip
 jboss_eap_patch_artifact_pattern: "*-patch.zip"
 
 # The jboss_eap_path needs to match the directory inside the distro zip file.
