Add to unmanaged the kieserver state file with the containers to start up

--- a/roles/rhdm-server/tasks/main.yml
+++ b/roles/rhdm-server/tasks/main.yml
@@ -10,3 +10,7 @@
   when: org_kie_server_controller is defined
 
 - import_tasks: install.yml
+
+- import_tasks: containers.yml
+  when: org_kie_server_controller is not defined
+  tags: containers
