--- a/site.yml
+++ b/site.yml
@@ -22,7 +22,7 @@
 
 # 2. RHDM Server (KIE Server) unmanaged or managed, via the 'org_kie_server_controller' variable.
 - name: provision RHDM Server
-  hosts: server:managed
+  hosts: managed:unmanaged
   tasks:
     - import_role:
         name: rhdm-server
