--- a/roles/rhdm-server/tasks/containers.yml
+++ b/roles/rhdm-server/tasks/containers.yml
@@ -4,5 +4,5 @@
 - name: create {{ org_kie_server_id }}.xml state file
   template:
     src: kieserver.xml.j2
-    dest: "{{ rhdm_server_data }}/{{ org_kie_server_id }}.xml"
+    dest: "{{ org_kie_server_repo }}/{{ org_kie_server_id }}.xml"
   when: rhdm_server_containers is defined
