--- a/roles/rhdm-central/tasks/users.yml
+++ b/roles/rhdm-central/tasks/users.yml
@@ -1,6 +1,6 @@
 ---
-- name: add admin user {{ rhdm_central_admin_usr }}
-  command: "{{ rhdm_central_home }}/bin/add-user.sh -a --user {{ rhdm_central_admin_usr }} --password {{ rhdm_central_admin_pwd }} --role admin"
+- name: add admin user {{ rhpam_central_admin_usr }}
+  command: "{{ rhpam_central_home }}/bin/add-user.sh -a --user {{ rhpam_central_admin_usr }} --password {{ rhpam_central_admin_pwd }} --role admin"
 
-- name: add controller user {{ rhdm_central_controller_usr }}
-  command: "{{ rhdm_central_home }}/bin/add-user.sh -a --user {{ rhdm_central_controller_usr }} --password {{ rhdm_central_controller_pwd }} --role rest-all"
+- name: add controller user {{ rhpam_central_controller_usr }}
+  command: "{{ rhpam_central_home }}/bin/add-user.sh -a --user {{ rhpam_central_controller_usr }} --password {{ rhpam_central_controller_pwd }} --role rest-all"
