--- a/roles/rhdm-server/vars/main.yml
+++ b/roles/rhdm-server/vars/main.yml
@@ -1,3 +1,3 @@
-kie_maven_settings_custom: "{{ rhdm_server_data }}/settings.xml"
+kie_maven_settings_custom: "{{ rhpam_server_data }}/settings.xml"
 org_kie_executor_disabled: "true"
-org_kie_server_repo: "{{ rhdm_server_data }}"
+org_kie_server_repo: "{{ rhpam_server_data }}"
