--- a/group_vars/managed.yml
+++ b/group_vars/managed.yml
@@ -6,7 +6,7 @@ org_kie_server_controller: ws://controller-host:8080/decision-central/websocket/
 org_kie_server_controller_user: controllerUsr
 org_kie_server_controller_pwd: controllerPwd
 
-# Connect to remote RHDM Central Maven repo.
-rhdm_server_maven_remote_workbench_repo_url: http://workbench-host:8080/decision-central/maven2/
-rhdm_server_maven_remote_workbench_repo_usr: adminUser
-rhdm_server_maven_remote_workbench_repo_pwd: password
+# Connect to remote RHPAM Central Maven repo.
+rhpam_server_maven_remote_workbench_repo_url: http://workbench-host:8080/decision-central/maven2/
+rhpam_server_maven_remote_workbench_repo_usr: adminUser
+rhpam_server_maven_remote_workbench_repo_pwd: password
