--- a/roles/rhdm-central/tasks/main.yml
+++ b/roles/rhdm-central/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: create {{ rhdm_central_temp }} installation directory
+- name: create {{ rhpam_central_temp }} installation directory
   file:
-    path: "{{ rhdm_central_temp }}"
+    path: "{{ rhpam_central_temp }}"
     state: directory
 
 - import_tasks: install.yml
