--- a/roles/rhdm-central/tasks/setup.yml
+++ b/roles/rhdm-central/tasks/setup.yml
@@ -1,7 +1,7 @@
 ---
-- name: create {{ rhdm_central_data }} directory
+- name: create {{ rhpam_central_data }} directory
   file:
-    path: "{{ rhdm_central_data }}"
+    path: "{{ rhpam_central_data }}"
     state: directory
 
 - name: create {{ kie_maven_settings_custom }}
@@ -12,33 +12,33 @@
 - name: create setup.cli
   template:
     src: setup.cli.j2
-    dest: "{{ rhdm_central_temp }}/setup.cli"
+    dest: "{{ rhpam_central_temp }}/setup.cli"
 
 - name: run setup.cli JBoss configuration
-  command: "{{ rhdm_central_home }}/bin/jboss-cli.sh --file={{ rhdm_central_temp }}/setup.cli"
+  command: "{{ rhpam_central_home }}/bin/jboss-cli.sh --file={{ rhpam_central_temp }}/setup.cli"
 
 # SSH keys necessary to git clone (import projects) and push via SSH.
 
-- name: generate SSH key pair {{ rhdm_central_ssh_key }}
+- name: generate SSH key pair {{ rhpam_central_ssh_key }}
   openssh_keypair:
-    path: "{{ rhdm_central_ssh_key }}"
+    path: "{{ rhpam_central_ssh_key }}"
   register: openssh_keypair
 
 - name: upload SSH public key to github.com
   github_key:
-    name: rhdm-central
-    token: "{{ rhdm_central_github_access_token }}"
+    name: rhpam-central
+    token: "{{ rhpam_central_github_access_token }}"
     pubkey: "{{ openssh_keypair.public_key }}"
   delegate_to: localhost
-  when: rhdm_central_github_access_token is defined
+  when: rhpam_central_github_access_token is defined
 
 # Git hook required steps below, knows_hosts needed for the 'git push'.
 
-- name: add {{ rhdm_central_git_hooks_known_hosts }} host key to known_hosts
+- name: add {{ rhpam_central_git_hooks_known_hosts }} host key to known_hosts
   known_hosts:
-    name: "{{ rhdm_central_git_hooks_known_hosts }}"
-    key: "{{ lookup('pipe', 'ssh-keyscan -t rsa {{ rhdm_central_git_hooks_known_hosts }}') }}"
-  when: rhdm_central_git_hooks_known_hosts is defined
+    name: "{{ rhpam_central_git_hooks_known_hosts }}"
+    key: "{{ lookup('pipe', 'ssh-keyscan -t rsa {{ rhpam_central_git_hooks_known_hosts }}') }}"
+  when: rhpam_central_git_hooks_known_hosts is defined
 
 - name: create git-hook directory {{ org_uberfire_nio_git_hooks }}
   file:
