--- a/roles/rhdm-server/tasks/main.yml
+++ b/roles/rhdm-server/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
-- name: create {{ rhdm_server_temp }} installation directory
+- name: create {{ rhpam_server_temp }} installation directory
   file:
-    path: "{{ rhdm_server_temp }}"
+    path: "{{ rhpam_server_temp }}"
     state: directory
 
 - import_tasks: setup.yml
