--- a/roles/rhdm-server/tasks/setup-managed.yml
+++ b/roles/rhdm-server/tasks/setup-managed.yml
@@ -2,7 +2,7 @@
 - name: create setup-managed.cli
   template:
     src: setup-managed.cli.j2
-    dest: "{{ rhdm_server_temp }}/setup-managed.cli"
+    dest: "{{ rhpam_server_temp }}/setup-managed.cli"
 
 - name: run setup-managed.cli JBoss configuration
-  command: "{{ rhdm_server_home }}/bin/jboss-cli.sh --file={{ rhdm_server_temp }}/setup-managed.cli"
+  command: "{{ rhpam_server_home }}/bin/jboss-cli.sh --file={{ rhpam_server_temp }}/setup-managed.cli"
