Change versions and properties to rhpam

--- a/roles/rhdm-central/vars/main.yml
+++ b/roles/rhdm-central/vars/main.yml
@@ -1,9 +1,9 @@
 org_kie_example: "true"
-org_jbpm_designer_perspective: "ruleflow"
+org_jbpm_designer_perspective: "full"
 designerdataobjects: "false"
-org_kie_workbench_profile: "FORCE_PLANNER_AND_RULES"
-org_jbpm_server_ext_disabled: "true"
-org_jbpm_ui_server_ext_disabled: "true"
+org_kie_workbench_profile: "FORCE_FULL"
+org_jbpm_server_ext_disabled: "false"
+org_jbpm_ui_server_ext_disabled: "false"
 org_uberfire_nio_git_dir: "{{ rhpam_central_data }}"
 org_uberfire_metadata_index_dir: "{{ rhpam_central_data }}"
 org_uberfire_nio_git_ssh_cert_dir: "{{ rhpam_central_data }}"
