Add org.kie.server.bypass.auth.user defaults 'false'

--- a/roles/rhpam-server/defaults/main.yml
+++ b/roles/rhpam-server/defaults/main.yml
@@ -18,5 +18,6 @@ org_kie_server_location: "http://{{ inventory_hostname }}:{{ org_kie_server_http
 
 org_kie_server_mgmt_api_disabled: "false"
 org_kie_server_startup_strategy: "ControllerBasedStartupStrategy"
+org_kie_server_bypass_auth_user: "false"
 
 rhpam_server_maven_jboss_enterprise_repo_url: https://maven.repository.redhat.com/ga/
