--- a/roles/rhpam-server/defaults/main.yml
+++ b/roles/rhpam-server/defaults/main.yml
@@ -7,8 +7,13 @@ rhpam_server_root: "{{ ansible_user_dir }}/rhpam-server"
 rhpam_server_home: "{{ jboss_eap_home }}" # From role jboss-eap
 rhpam_server_data: "{{ rhpam_server_root }}/data"
 
-rhpam_server_kieserver_usr: kieserverUser
-rhpam_server_kieserver_pwd: password
+rhpam_server_api_usr: kieserver
+rhpam_server_api_pwd: password
+rhpam_server_api_roles: kie-server
+
+rhpam_server_human_usr: shadowman
+rhpam_server_human_pwd: password
+rhpam_server_human_roles: kie-server,redhat
 
 org_kie_server_id: kieserver-default
 org_kie_server_mode: development
