--- a/roles/rhpam-server/tasks/setup.yml
+++ b/roles/rhpam-server/tasks/setup.yml
@@ -4,8 +4,11 @@
     path: "{{ rhpam_server_data }}"
     state: directory
 
-- name: add kieserver user {{ rhpam_server_kieserver_usr }}
-  command: "{{ rhpam_server_home }}/bin/add-user.sh -a --user {{ rhpam_server_kieserver_usr }} --password {{ rhpam_server_kieserver_pwd }} --role kie-server"
+- name: add kieserver api user {{ rhpam_server_api_usr }}
+  command: "{{ rhpam_server_home }}/bin/add-user.sh -a --user {{ rhpam_server_api_usr }} --password {{ rhpam_server_api_pwd }} --role {{ rhpam_server_api_roles }}"
+
+- name: add human user {{ rhpam_server_human_usr }}
+  command: "{{ rhpam_server_home }}/bin/add-user.sh -a --user {{ rhpam_server_human_usr }} --password {{ rhpam_server_human_pwd }} --role {{ rhpam_server_human_roles }}"
 
 - name: create {{ kie_maven_settings_custom }}
   template:
