--- a/roles/rhpam-server/defaults/main.yml
+++ b/roles/rhpam-server/defaults/main.yml
@@ -7,14 +7,16 @@ rhpam_server_root: "{{ ansible_user_dir }}/rhpam-server"
 rhpam_server_home: "{{ jboss_eap_home }}" # From role jboss-eap
 rhpam_server_data: "{{ rhpam_server_root }}/data"
 
-rhpam_server_api_usr: kieserver
-rhpam_server_api_pwd: password
-rhpam_server_api_roles: kie-server
-
-rhpam_server_human_usr: shadowman
-rhpam_server_human_pwd: password
-rhpam_server_human_roles: redhat
-# rhpam_server_human_roles: kie-server,redhat # if bypass is false
+rhpam_server_users:
+  - user: apiUser
+    password: password
+    roles: kie-server
+  - user: adminUser
+    password: password
+    roles: kie-server,Administrators
+  - user: shadowman
+    password: password
+    roles: redhat
 
 org_kie_server_id: kieserver-default
 org_kie_server_mode: development
@@ -25,6 +27,5 @@ org_kie_server_location: "http://{{ inventory_hostname }}:{{ org_kie_server_http
 org_kie_server_mgmt_api_disabled: "false"
 org_kie_server_startup_strategy: "ControllerBasedStartupStrategy"
 org_kie_server_bypass_auth_user: "true"
-org_jbpm_ht_callback: "props"
 
 rhpam_server_maven_jboss_enterprise_repo_url: https://maven.repository.redhat.com/ga/
