--- a/roles/rhpam-server/vars/main.yml
+++ b/roles/rhpam-server/vars/main.yml
@@ -3,4 +3,5 @@ org_jbpm_server_ext_disabled: "false"
 org_optaplanner_server_ext_disabled: "false"
 org_kie_executor_disabled: "false"
 org_kie_server_repo: "{{ rhpam_server_data }}"
+org_jbpm_ht_callback: "props"
 jbpm_user_group_mapping: "file://{{ rhpam_server_home }}/standalone/configuration/application-roles.properties"
