--- a/site.yml
+++ b/site.yml
@@ -35,8 +35,7 @@
         msg:
           - "Installation dir: {{ rhpam_server_root }}"
           - "URL: http://{{ inventory_hostname }}:{{ org_kie_server_http_port }}/kie-server/services/rest/server"
-          - "KIE Server username: {{ rhpam_server_api_usr }}"
-          - "KIE Server password: {{ rhpam_server_api_pwd }}"
+          - "KIE Server users: {{ rhpam_server_users }}"
 
 # 3. RHPAM Central and Server on the same host.
 #    The KIE Server is in managed mode and automatically connected to Central's contoller instance.
