Add appformer_ssh_keys_storage_folder to central

--- a/roles/rhpam-central/vars/main.yml
+++ b/roles/rhpam-central/vars/main.yml
@@ -10,5 +10,6 @@ org_uberfire_nio_git_ssh_cert_dir: "{{ rhpam_central_data }}"
 org_guvnor_m2repo_dir: "{{ rhpam_central_data }}/repositories/kie"
 org_uberfire_nio_git_hooks: "{{ rhpam_central_data }}/git-hooks"
 appformer_git_hooks_bundle: "{{ rhpam_central_data }}/git-hook-messages.properties"
+appformer_ssh_keys_storage_folder: "{{ rhpam_central_data }}/.security/pkeys"
 rhpam_central_ssh_key: "{{ ansible_user_dir }}/.ssh/id_rsa"
 kie_maven_settings_custom: "{{ rhpam_central_data }}/settings.xml"
