--- a/roles/rhpam-central/vars/main.yml
+++ b/roles/rhpam-central/vars/main.yml
@@ -11,5 +11,6 @@ org_guvnor_m2repo_dir: "{{ rhpam_central_data }}/repositories/kie"
 org_uberfire_nio_git_hooks: "{{ rhpam_central_data }}/git-hooks"
 appformer_git_hooks_bundle: "{{ rhpam_central_data }}/git-hook-messages.properties"
 appformer_ssh_keys_storage_folder: "{{ rhpam_central_data }}/.security/pkeys"
+org_appformer_m2repo_url: https://{{ inventory_hostname }}:{{ jboss_https_port_number }}/business-central/maven2 # From role jboss-eap
 rhpam_central_ssh_key: "{{ ansible_user_dir }}/.ssh/id_rsa"
 kie_maven_settings_custom: "{{ rhpam_central_data }}/settings.xml"
